* Help file updated.

--- a/LogAnalyzer/LogAnalyzerHelp/index.html
+++ b/LogAnalyzer/LogAnalyzerHelp/index.html
@@ -110,6 +110,14 @@
         </ul>
         
         <br>
+        <h2 style="font-family:'Helvetica Neue'; color:#0057B3; ">Sorting log</h2>
+        <hr/>
+        <p>
+        By hitting ⌘+⌥+S you can sort the log file by the number of matching characters in log lines. Lines with the largest number of identical characters are on the top of newly opened window.
+        </p>
+
+        
+        <br>
         <h2 style="font-family:'Helvetica Neue'; color:#0057B3; ">Using favorites</h2>
         <hr/>
         <p>
